--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-full">
   <head>
     <title>SearQ</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,83 +22,9 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-  <body class="font-sans text-white leading-normal tracking-normal bg-zinc-900">
-    <main class="mx-auto">
+  <body class="font-sans text-white leading-normal tracking-normal h-full">
+    <main class="grid min-h-full place-items-center bg-white px-4">
       <%= yield %>
     </main>
   </body>
-  <script src="//cdn.jsdelivr.net/npm/@meilisearch/instant-meilisearch/dist/instant-meilisearch.umd.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/instantsearch.js@4"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-  <script>
-    const search = instantsearch({
-      indexName: "Item",
-      searchClient: instantMeiliSearch(
-        "http://localhost:7700",
-        "36knp7eV10xkiMwdefKh6_MEYWJ4OG8RAkfxehKjO0Q"
-      )
-      });
-      search.addWidgets([
-        instantsearch.widgets.searchBox({
-          container: "#searchbox",
-          placeholder: "search over RSS feeds",
-          autofocus: true,
-          showLoadingIndicator: true,
-          showReset: false,
-          showSubmit: false
-        }),
-        instantsearch.widgets.configure({ hitsPerPage: 15 }),
-        instantsearch.widgets.hits({
-          container: "#hits",
-          templates: {
-          item: `
-            <div class="shadow mb-6">
-              <div class="hit-url mb-1">
-                <a href="{{url}}" class="text-base text-gray-500">{{url}}</a>
-              </div>
-              <div class="hit-name">
-                <a class="bg-indigo-600 text-white py-0.5 px-2 rounded font-semibold hover:underline" href="{{feed_url}}">{{feed_title}}</a> <a href="{{url}}" class="underline hover:text-sky-400"> {{#helpers.highlight}}{ "attribute": "title" }{{/helpers.highlight}}</a>
-              </div>
-              <div class="hit-description text-base text-gray-300 max-w-4xl">
-                <span class="text-gray-500 text-sm mr-1">{{published_at}}</span> {{#helpers.highlight}}{ "attribute": "text" }{{/helpers.highlight}}
-              </div>
-              <div class="hit-categories text-base text-sky-700">
-                {{categories}}
-              </div>
-            </div>
-          `
-          },
-          transformItems: items => {
-            return items.map(item => {
-              return {
-                ...item,
-                published_at: moment(item.published_at).fromNow(),
-                categories: item.categories.join(" ")
-              };
-            });
-          }
-        })
-      ]);
-    
-    
-      search.addWidget(
-        instantsearch.widgets.stats({
-          container: '#stats',
-        })
-      );
-    
-      search.addWidget(
-        instantsearch.widgets.pagination({
-          container: '#pagination',
-          templates: {
-            first: '<<',
-            last: '>>',
-            previous: '<',
-            next: '>',
-          },
-        })
-      );
-    
-      search.start();
-  </script>
 </html>
