--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -21,7 +21,7 @@
       <i class="fa-brands fa-github mr-1"></i>
       GitHub
     </a>
-    <a class="text-sm font-semibold text-gray-900" href="">
+    <a class="text-sm font-semibold text-gray-900" href="https://github.com/searq/searq.org/wiki">
       docs <span aria-hidden="true">&rarr;</span>
     </a>
   </div>
