--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="mt-6 flex items-center justify-center gap-x-6">
-    <a href="https://github.com/searq/searq.org" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-data-clipboard-target="#foo"visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+    <a href="https://github.com/searq/searq.org" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
       <i class="fa-brands fa-github mr-1"></i>
       GitHub
     </a>
