--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,5 +27,21 @@
     <main class="grid min-h-full place-items-center bg-white px-4">
       <%= yield %>
     </main>
+    <footer class="bg-white absolute bottom-0 right-0 left-0 text-center">
+      <div class="mx-auto max-w-7xl py-6 px-6 lg:px-8">
+        <div class="mt-8 md:order-1 md:mt-0">
+          <p class="text-center text-sm leading-5 text-gray-800">Made by <a href="https://twitter.com/daviducolo" class="text-indigo-700 hover:underline">Davide Santangelo</a></p>
+        </div>
+      </div>
+    </footer>
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+    <script>
+      kofiWidgetOverlay.draw('davidesantangelo', {
+        'type': 'floating-chat',
+        'floating-chat.donateButton.text': 'Tip Me',
+        'floating-chat.donateButton.background-color': '#794bc4',
+        'floating-chat.donateButton.text-color': '#fff'
+      });
+    </script>
   </body>
 </html>
