Add .to_i to avoid string param as limit
400 Bad Request - Invalid value type at `.limit`: expected a positive integer

--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -18,7 +18,7 @@
   </div>
   <div class="my-0.5">
     <%= link_to download_hello_index_path(format: 'csv'), class: "text-xs text-gray-800 hover:underline hover:text-sky-700" do %>
-      <%= @feeds.size %> feeds 
+      <%= @feeds_count %> source feeds 
     <% end %>
   </div>
   <div class="mt-6 flex items-center justify-center gap-x-6">
