Add export CSV page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,13 @@
 
 
 @import "font-awesome";
+
+textarea[name=query] {
+  resize: none;
+}
+
+
+button[name=export]:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
