--- a/app/views/exports/index.html.erb
+++ b/app/views/exports/index.html.erb
@@ -10,9 +10,18 @@
     <% end %>
   </div>
   <div class="mt-2">
-  
-    <a href="/" class="text-gray-800 text-center block w-full mt-4 hover:underline">
-      <- back
+    <a class="text-sm font-semibold text-gray-900 hover:underline hover:text-gray-700" href="/">
+      <span aria-hidden="true">&larr;</span> back 
     </a>
   </div>
 </div>
+
+<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('davidesantangelo', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Tip',
+    'floating-chat.donateButton.background-color': '#794bc4',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
