--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,4 +43,22 @@
       </div>
     </footer>
   </body>
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://unpkg.com/tippy.js@6"></script>
+  <script>
+    tippy('#github-btn', {
+      content: 'View on GitHub',
+      placement: 'bottom'
+    });
+
+    tippy('#docs-btn', {
+      content: 'SearQ documentation',
+      placement: 'bottom'
+    });
+
+    tippy('#export-btn', {
+      content: 'Try the export tool',
+      placement: 'bottom'
+    });
+  </script>
 </html>
