--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,8 +56,13 @@
       placement: 'bottom'
     });
 
+    tippy('#tool-btn', {
+      content: 'Try the awesome export Tool',
+      placement: 'bottom'
+    });
+
     tippy('#export-btn', {
-      content: 'Try the export tool',
+      content: 'Export data as CSV (max 5000 items per query)',
       placement: 'bottom'
     });
   </script>
