--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,17 @@
     <title>SearQ</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="author" content="Davide Santangelo">
-    <meta name="description" content="searq - RSS search engine - a search engine that allows you to find RSS feeds easily">
+    <meta name="description" content="SearQ - Free and Fast, Cool, RESTful RSS Search Engine.">
     <meta name="keywords" content="rails api web RSS">
     <meta property="og:url" content="https://searq.org">
     <meta property="og:image" content="https://searq.org/logo.png">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
-    <meta property="og:image:alt" content="datorss">
+    <meta property="og:image:alt" content="searq">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="searq.org - the best RSS search experience you can find">
-    <meta property="og:title" content="searq.org - the best RSS search experience you can find">
-    <meta property="og:description" content="searq.org - RSS search engine - a search engine that allows you to find RSS feeds easily">
+    <meta property="og:site_name" content="SearQ - Free and Fast, Cool, RESTful RSS Search Engine.">
+    <meta property="og:title" content="SearQ - Free and Fast, Cool, RESTful RSS Search Engine.">
+    <meta property="og:description" content="SearQ - Free and Fast, Cool, RESTful RSS Search Engine. A RESTful API search engine that allows you to find data from RSS feeds easily">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
