--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="SearQ - Free and Fast, Cool, RESTful RSS Search Engine.">
     <meta property="og:title" content="SearQ - Free and Fast, Cool, RESTful RSS Search Engine.">
-    <meta property="og:description" content="SearQ - Free and Fast, Cool, RESTful RSS Search Engine. A RESTful API search engine that allows you to find data from RSS feeds easily">
+    <meta property="og:description" content="SearQ, the RSS search engine that is both speedy and free! SearQ offers a RESTful API that simplifies the search for data from RSS feeds. Finding what you need has never been easier with SearQ.">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
