--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
     });
 
     tippy('#docs-btn', {
-      content: 'SearQ documentation',
+      content: 'Getting started with SearQ',
       placement: 'bottom'
     });
 
