--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center" data-controller="hello">
   <p class="text-base font-semibold text-indigo-600"><i class="fa-solid fa-rss"></i></p>
-  <h1 class="mt-4 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">SearQ</h1>
+  <h1 class="mt-4 text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">SearQ</h1>
   <p class="mt-4 text-sm md:text-lg leading-7 text-gray-600">Free and Fast, Cool, RESTful RSS Search Engine.</p>
   <div class=" text-left mt-5 relative z-10 col-span-3 bg-slate-800 rounded-lg shadow-lg xl:ml-0 dark:shadow-none dark:ring-1 dark:ring-inset dark:ring-white/10">
     <div class="relative flex text-slate-400 text-xs leading-6">
