--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -24,7 +24,7 @@
       <a id="docs-btn" href="https://github.com/searq/searq.org/wiki" class="relative -ml-px  items-center bg-white px-4 py-2 text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-sky-50 focus:z-10 w-4/12">
         Docs
       </a>
-      <%= link_to exports_path, id: 'tool-btn', class: "relative -ml-px  items-center rounded-r-md bg-white px-4 py-2 text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-yellow-50 focus:z-10 w-4/12", data: {turbo: false} do %>
+      <%= link_to exports_path, id: 'tool-btn', class: "relative -ml-px  items-center rounded-r-md bg-white px-4 py-2 text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-yellow-50 focus:z-10 w-4/12" do %>
         Export
       <% end %>
     </span>
