--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,5 +65,10 @@
       content: 'Export data as CSV (max 1000 items per query)',
       placement: 'bottom'
     });
+
+    tippy('#stats-btn', {
+      content: 'See some stats about data',
+      placement: 'bottom'
+    });
   </script>
 </html>
