--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -5,17 +5,17 @@
     <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
       <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
         <dt class="truncate text-sm font-medium text-gray-500">Total Feeds</dt>
-        <dd class="mt-1 text-3xl font-semibold tracking-tight text-indigo-500"><%= @feeds_count %></dd>
+        <dd class="mt-1 text-3xl font-semibold tracking-tight text-indigo-500"><%= number_to_human(@feeds_count, format: '%n %u', units: { thousand: 'K', million: 'M' }) %></dd>
       </div>
 
       <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
         <dt class="truncate text-sm font-medium text-gray-500">Total Items</dt>
-        <dd class="mt-1 text-3xl font-semibold tracking-tight text-yellow-500"><%= @items_count %></dd>
+        <dd class="mt-1 text-3xl font-semibold tracking-tight text-yellow-500"><%= number_to_human(@items_count, format: '%n %u', units: { thousand: 'K', million: 'M' }) %></dd>
       </div>
 
       <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
         <dt class="truncate text-sm font-medium text-gray-500">Total Tokens</dt>
-        <dd class="mt-1 text-3xl font-semibold tracking-tight text-red-500"><%= @tokens_count %></dd>
+        <dd class="mt-1 text-3xl font-semibold tracking-tight text-red-500"><%= number_to_human(@tokens_count, format: '%n %u', units: { thousand: 'K', million: 'M' }) %></dd>
       </div>
     </dl>
   </div>
