Add flows feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
       placement: 'bottom'
     });
     
-    tippy('#tool-btn', {
+    tippy('#export-tool-btn', {
       content: 'Try the awesome export Tool',
       placement: 'bottom'
     });
@@ -69,6 +69,16 @@
 
     tippy('#stats-btn', {
       content: 'See some stats about data',
+      placement: 'bottom'
+    });
+
+    tippy('#flows-tool-btn', {
+      content: 'Create your own flows',
+      placement: 'bottom'
+    });
+
+    tippy('#flows-btn', {
+      content: 'Create your own searq endpoint',
       placement: 'bottom'
     });
   </script>
