--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,8 +21,15 @@ textarea[name=query] {
   resize: none;
 }
 
-
-button[name=export]:disabled {
+textarea[name=query]:disabled {
   opacity: 0.6;
   cursor: not-allowed;
 }
+
+input[name=submit]:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+
+
