--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center" data-controller="hello">
   <p class="text-base font-semibold text-indigo-600"><i class="fa-solid fa-rss"></i></p>
   <h1 class="mt-4 text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">SearQ</h1>
-  <p class="mt-4 text-sm md:text-lg leading-7 text-gray-600">Free and Fast, Cool, RESTful RSS Search Engine.</p>
+  <p class="mt-4 text-sm md:text-lg leading-7 text-gray-600">Free, Fast and Cool, RESTful <span class="bg-yellow-500 text-white p-1 rounded">RSS based</span> Search Engine.</p>
   <div class=" text-left mt-5 relative z-10 col-span-3 bg-slate-800 rounded-lg shadow-lg xl:ml-0 dark:shadow-none dark:ring-1 dark:ring-inset dark:ring-white/10">
     <div class="relative flex text-slate-400 text-xs leading-6">
       <div class="mt-2 flex-none text-sky-300 border-t border-b border-t-transparent border-b-sky-300 px-4 py-1 flex items-center"><%= @url %></div>
@@ -18,13 +18,16 @@
   </div>
   <div class="mt-6 flex items-center justify-center">
     <span class="isolate inline-flex rounded-md shadow-sm w-9/12">
-      <a id="docs-btn" href="https://github.com/searq/searq.org/wiki" class="relative items-center rounded-l-md bg-white px-0.5 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-indigo-50 hover:underline focus:z-10 w-4/12">
+      <a id="docs-btn" href="https://github.com/searq/searq.org/wiki" class="relative items-center rounded-l-md bg-white py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-indigo-50 hover:underline focus:z-10 w-3/12">
         Docs
       </a>
-      <%= link_to exports_path, id: 'tool-btn', class: "relative -ml-px  items-center bg-white px-0.5 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-yellow-50 hover:underline focus:z-10 w-4/12" do %>
+      <%= link_to exports_path, id: 'export-tool-btn', class: "relative -ml-px  items-center bg-white py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-yellow-50 hover:underline focus:z-10 w-3/12" do %>
         Export
       <% end %>
-      <%= link_to stats_path, id: 'stats-btn', class: "relative -ml-px  items-center rounded-r-md bg-white px-0.5 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-red-50 hover:underline focus:z-10 w-4/12" do %>
+      <%= link_to flows_path, id: 'flows-tool-btn', class: "relative -ml-px  items-center bg-white py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-green-50 hover:underline focus:z-10 w-3/12" do %>
+        Flows
+      <% end %>
+      <%= link_to stats_path, id: 'stats-btn', class: "relative -ml-px  items-center rounded-r-md bg-white py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-red-50 hover:underline focus:z-10 w-3/12" do %>
         Stats
       <% end %>
     </span>
