--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,12 +73,12 @@
     });
 
     tippy('#flows-tool-btn', {
-      content: 'Create your own flows',
+      content: 'Create your own flow',
       placement: 'bottom'
     });
 
     tippy('#flows-btn', {
-      content: 'Create your own searq endpoint',
+      content: 'Create your own SearQ endpoint',
       placement: 'bottom'
     });
   </script>
