Add notice alert when flow was created

--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -13,10 +13,10 @@
       </div>
     </div>
     <div class="relative">
-      <pre class="text leading-6 text-slate-50 flex ligatures-none overflow-auto"><code class="flex-none min-w-full p-8"><span class="flex"><svg viewBox="0 -9 3 24" aria-hidden="true" class="flex-none overflow-visible text-pink-400 w-auto h-6 mr-3"><path d="M0 0L3 3L0 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg><span class="flex-auto"><span class="font-semibold">GET</span> /search.json -d 'q={q}'</span></span></code></pre>
+      <pre class="text leading-6 text-slate-50 flex ligatures-none overflow-auto"><code class="flex-none min-w-full p-6 md:p-8"><span class="flex"><svg viewBox="0 -9 3 24" aria-hidden="true" class="flex-none overflow-visible text-pink-400 w-auto h-6 mr-3"><path d="M0 0L3 3L0 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg><span class="flex-auto"><span class="font-semibold">GET</span> /search.json -d 'q={q}'</span></span></code></pre>
     </div>
   </div>
-  <div class="mt-6 flex items-center justify-center">
+  <div class="mt-8 flex items-center justify-center">
     <span class="isolate inline-flex rounded-md shadow-sm w-8/12">
       <a id="docs-btn" href="https://github.com/searq/searq.org/wiki" class="relative items-center rounded-l-md bg-gray-50 py-2 text-xs md:text-sm font-semibold text-indigo-600 ring-1 ring-inset ring-gray-300 hover:bg-indigo-50 hover:underline focus:z-10 w-3/12">
         Docs
