--- a/app/views/flows/show.html.erb
+++ b/app/views/flows/show.html.erb
@@ -1,4 +1,33 @@
-<div class="text-center" data-controller="flow">
+<div class="text-center">
+  <% if flash[:notice] %>
+    <div aria-live="assertive" class="notification-modal text-left pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6">
+      <div class="flex w-full flex-col items-center space-y-4 sm:items-end">
+        <div class="pointer-events-auto w-full max-w-sm overflow-hidden rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5">
+          <div class="p-4">
+            <div class="flex items-start">
+              <div class="flex-shrink-0">
+                <svg class="h-6 w-6 text-green-400" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+              </div>
+              <div class="ml-3 w-0 flex-1 pt-0.5">
+                <p class="text-sm font-medium text-gray-900"><%= flash[:notice] %></p>
+                <p class="mt-1 text-sm text-gray-500">Anyone with the <a href="https://searq.org/flows/<%=@flow.id%>.json" target="_BLANK" class="text-sky-600 hover:underline">link</a> can view this flow.</p>
+              </div>
+              <div class="ml-4 flex flex-shrink-0">
+                <button type="button" class="inline-flex rounded-md bg-white text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" onclick="this.closest('.notification-modal').remove()">
+                  <span class="sr-only">Close</span>
+                  <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path d="M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z" />
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
   <a class="text-base font-semibold text-green-500 hover:text-green-400" href="/"><i class="fa-solid fa-rss"></i></a>
   <h1 class="mt-4 text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">Flow.json</h1>
   <div class="text-xs text-gray-600 mt-1">flow created <span class="font-semibold"><%= "#{time_ago_in_words(@flow.created_at, include_seconds: true)} ago" %></span> and available forever</div>
