Add UX/UI cleaning

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,12 @@
       <%= yield %>
     </main>
     <footer class="absolute bottom-0 right-0 left-0 text-center">
-      <div class="mx-auto max-w-7xl py-6 px-6 lg:px-8">
-        <div class="mt-8 md:order-1 md:mt-0">
-          <p class="text-center text-xs md:text-sm leading-5 text-gray-800">Made by <a href="https://twitter.com/daviducolo" class="text-indigo-700 hover:underline">Davide Santangelo</a></p>
+      <div class="mx-auto max-w-7xl py-6 px-6 lg:px-8 text-gray-800">
+        <div class="mt-6 md:order-1 md:mt-0 hidden md:block">
+          <p class="text-center text-sm leading-5">Code created by <a title="Davide Santangelo" href="https://twitter.com/daviducolo" class="hover:underline font-semibold">Davide</a> can be found on <a href="https://github.com/searq/searq.org" class="hover:underline font-semibold">GitHub</a></p>
+        </div>
+        <div class="mt-6 md:order-1 md:mt-0 md:hidden block">
+          <p class="text-center text-sm leading-5"><a href="https://github.com/searq/searq.org" class="hover:underline font-semibold">GitHub</a></p>
         </div>
       </div>
     </footer>
